--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       },
       {
         title: "Devalle Construction",
-        images: ["assets/boardArtboard 1CONS1.PNG"],
+        images: ["assets/boardArtboard 1CONS1.png"],
         link: "Projects.html"
       },
       {
