--- a/Projects.html
+++ b/Projects.html
@@ -13,7 +13,7 @@
     }
 
     .project {
-      background: #fff;
+    background-color: #fff ;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.05);
       padding: 1.5rem;
@@ -27,21 +27,24 @@
     }
 
     .big-img {
-      width: 100%;
+      width: 50%;
       height: auto;
       border-radius: 8px;
+      border: solid 0px;
     }
 
     .mockups {
       display: flex;
-      flex-direction: column;
-      gap: 1rem;
+      flex-direction: row;
+      justify-content: flex-end;
+      gap: 2rem;
     }
 
     .mockups img {
-      width: 100%;
+      width: 90%;
       height: auto;
       border-radius: 8px;
+      border: solid 0px;
     }
 
     .description {
@@ -59,26 +62,103 @@
     // Project data array
     const projects = [
       {
-        title: "Universal Gym Logo Design",
+        title: "Strongman Gym ",
         bigImage: "assets/GymL2Artboard 1.svg",
-        mockup1: "assets/GymL2Artboard 1.svg",
-        mockup2: "assets/GymL2Artboard 1.svg",
+        mockup1: "assets/STBartboard 1.png",
+        mockup2: "assets/STMerchArtboard 1.png",
         description: "A minimalist logo created for a modern Gym, emphasizing clean lines and versatility across digital and print platforms."
       },
       {
-        title: "Gym Logo Design",
-        bigImage: "assets/.svg",
-        mockup1: "assets/.svg",
-        mockup2: "assets/.svg",
+        title: "Universal Gym",
+        bigImage: "assets/GymL4Artboard 1.svg",
+        mockup1: "assets/UBArtboard 1.svg",
+        mockup2: "assets/UBMerchArtboard 1.png",
         description: ""
       },
       {
         title: "Gym Logo Design",
-        bigImage: "assets/.svg",
-        mockup1: "assets/.svg",
-        mockup2: "assets/.svg",
-        description: "."
-      }
+        bigImage: "assets/GymL1Artboard 1@2x.png",
+        mockup1: "assets/BFCArtboard 1.png",
+        mockup2: "assets/BFArtboard 1.png",
+        description: ""
+      },
+      {
+        title: "River Grille",
+        bigImage: "assets/RG01Artboard 1.png",
+        mockup1: "assets/",
+        mockup2: "assets/",
+        description: ""
+      },
+      {
+        title: "April Mclaren",
+        bigImage: "assets/aprilmcclalen.png",
+        mockup1: "assets/",
+        mockup2: "assets/",
+        description: ""
+      },
+       {
+        title: "Lassen construction",
+        bigImage: "assets/lassenlogo1Artboard 1.png",
+        mockup1: "assets/",
+        mockup2: "assets/",
+        description: ""
+      }, 
+      {
+        title: "JM Equipment repair",
+        bigImage: "assets/JM Equipment repairlogArtboard 1.png",
+        mockup1: "assets/",
+        mockup2: "assets/",
+        description: ""
+      }, 
+      {
+        title: "CAR-Thena",
+        bigImage: "assets/CAR-TArtboard 1.svg",
+        mockup1: "assets/",
+        mockup2: "assets/",
+        description: ""
+      },
+      {
+        title: "Walsh Capital",
+        bigImage: "assets/Walsh2Artboard 1@3x.png",
+        mockup1: "assets/",
+        mockup2: "assets/",
+        description: ""
+      },
+      {
+        title: "Parramatta Consultancy",
+        bigImage: "assets/PARRAMATTA2Artboard 1@2x.png",
+        mockup1: "assets/",
+        mockup2: "assets/",
+        description: ""
+      },
+      {
+        title: "City Grill",
+        bigImage: "assets/CITYGRILLArtboard 1.svg",
+        mockup1: "assets/",
+        mockup2: "assets/",
+        description: ""
+      },
+      {
+        title: "Capstan Software solutions",
+        bigImage: "assets/CAPSTANArtboard 1.png",
+        mockup1: "assets/",
+        mockup2: "assets/",
+        description: ""
+      },
+      {
+        title: "The Boardroom Africa",
+        bigImage: "assets/boardArtboard 1board2.png",
+        mockup1: "assets/",
+        mockup2: "assets/",
+        description: ""
+      },
+      {
+        title: "Edmonton Church",
+        bigImage: "assets/boardArtboard 11.png",
+        mockup1: "assets/",
+        mockup2: "assets/",
+        description: ""
+      },
     ];
 
     const container = document.getElementById('project-container');
