--- a/Projects.html
+++ b/Projects.html
@@ -64,7 +64,7 @@
       {
         title: "Strongman Gym ",
         bigImage: "assets/GymL2Artboard 1.svg",
-        mockup1: "assets/STBartboard 1.png",
+        mockup1: "assets/STBArtboard 1.png",
         mockup2: "assets/STMerchArtboard 1.png",
         description: "A minimalist logo created for a modern Gym, emphasizing clean lines and versatility across digital and print platforms."
       },
