--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
       <ul>
         <li><a href="#services">Services</a></li>
-        <li><a href="#projects">Projects</a></li>
+        <li><a href="Projects.html">Projects</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
