--- a/index.html
+++ b/index.html
@@ -108,42 +108,42 @@
     const logoProjects = [
       {
         title: "April McClalen",
-        images: ["assets/aprilmcclalen.png"],
+        images: ["assets/aprilmcclalen.webp"],
         link: "Projects.html"
       },
       {
         title: "Devalle Construction",
-        images: ["assets/boardArtboard 1CONS1.png"],
+        images: ["assets/boardArtboard 1CONS1.webp"],
         link: "Projects.html"
       },
       {
         title: "Lassen Construction",
-        images: ["assets/lassenlogo1Artboard 1.png"],
+        images: ["assets/lassenlogo1Artboard 1.webp"],
         link: "Projects.html"
       },
       {
         title: "JM Equipment repair",
-        images: ["assets/JM Equipment repairlogArtboard 1.png"],
+        images: ["assets/JM Equipment repairlogArtboard 1.webp"],
         link: "Projects.html"
       },
       {
         title: "Parramatta Consultancy",
-        images: ["assets/PARRAMATTA2Artboard 1@2x.png"],
+        images: ["assets/PARRAMATTA2Artboard 1@2x.webp"],
         link: "Projects.html"
       },
       {
-        title: "Ralle Remake logo",
-        images: ["assets/rallelogoArtboard 1.png"],
+        title: "MFS",
+        images: ["assets/MFSlogo1Artboard 1.webp"],
         link: "Projects.html"
       },
       {
         title: "River Grille",
-        images: ["assets/RG01Artboard 1.png"],
+        images: ["assets/RG01Artboard 1.webp"],
         link: "Projects.html"
       },
       {
         title: "Walsh Capital",
-        images: ["assets/Walsh2Artboard 1@3x.png"],
+        images: ["assets/Walsh2Artboard 1@3x.webp"],
         link: "Projects.html"
       },
       {
@@ -153,37 +153,37 @@
       },
       {
         title: "Capstan Software solutions",
-        images: ["assets/CAPSTANArtboard 1.png"],
+        images: ["assets/CAPSTANArtboard 1.webp"],
         link: "Projects.html"
       },
       {
         title: "The Boardroom Africa",
-        images: ["assets/boardArtboard 1board2.png"],
+        images: ["assets/boardArtboard 1board2.webp"],
         link: "Projects.html"
       },
       {
         title: "Edmonton Church",
-        images: ["assets/boardArtboard 11.png"],
+        images: ["assets/boardArtboard 11.webp"],
         link: "Projects.html"
       },
       {
         title: "Iron Hand",
-        images: ["assets/ironhandArtboard 1@2x.png"],
+        images: ["assets/ironhandArtboard 1@2x.webp"],
         link: "Projects.html"
       },
       {
         title: "Advent Mission",
-        images: ["assets/adventArtboard 1@2x.png"],
+        images: ["assets/adventArtboard 1@2x.webp"],
         link: "Projects.html"
       },
       {
         title: "River Grille 2",
-        images: ["assets/RIVERGRILLE1Artboard 1@2x.png"],
+        images: ["assets/RIVERGRILLE1Artboard 1@2x.webp"],
         link: "Projects.html"
       },
       {
         title: "River Grille 3",
-        images: ["assets/RIVERGRILLE3Artboard 1.png"],
+        images: ["assets/RIVERGRILLE2Artboard 1.webp"],
         link: "Projects.html"
       },
       {
@@ -193,7 +193,7 @@
       },
       {
         title: "Venous Ventures",
-        images: ["assets/venousvArtboard 1.png"],
+        images: ["assets/venousvArtboard 1.webp"],
         link: "Projects.html"
       },
       {
