--- a/Projects.html
+++ b/Projects.html
@@ -158,92 +158,92 @@
       {
         title: "Strongman Gym ",
         bigImage: "assets/GymL2Artboard 1.svg",
-        mockup1: "assets/stmArtboard 1.png",
-        mockup2: "assets/STMerchArtboard 1.png",
+        mockup1: "assets/stmArtboard 1.webp",
+        mockup2: "assets/STMerchArtboard 1.webp",
         description: "A minimalist logo created for a modern Gym, emphasizing clean lines and versatility across digital and print platforms."
       },
       {
         title: "Universal Gym",
         bigImage: "assets/GymL4Artboard 1.svg",
-        mockup1: "assets/UGArtboard 1.png",
-        mockup2: "assets/UBMerchArtboard 1.png",
+        mockup1: "assets/UGArtboard 1.webp",
+        mockup2: "assets/UBMerchArtboard 1.webp",
         description: ""
       },
       {
         title: "Gym Logo Design",
-        bigImage: "assets/GymL1Artboard 1@2x.png",
-        mockup1: "assets/BFGArtboard 1.png",
-        mockup2: "assets/BFArtboard 1.png",
+        bigImage: "assets/GymL1Artboard 1@2x.webp",
+        mockup1: "assets/BFGArtboard 1.webp",
+        mockup2: "assets/BFArtboard 1.webp",
         description: ""
       },
       {
         title: "River Grille",
-        bigImage: "assets/RG01Artboard 1.png",
-        mockup1: "assets/RG1Artboard 1.png",
-        mockup2: "assets/RGBRArtboard 1.png",
+        bigImage: "assets/RG01Artboard 1.webp",
+        mockup1: "assets/RG1Artboard 1.webp",
+        mockup2: "assets/RGBRArtboard 1.webp",
         description: ""
       },
       {
         title: "April Mclaren",
-        bigImage: "assets/approArtboard 1.png",
-        mockup1: "assets/April 2mck.png",
-        mockup2: "assets/ap2Artboard 1.png",
+        bigImage: "assets/approArtboard 1.webp",
+        mockup1: "assets/April 2mck.webp",
+        mockup2: "assets/ap2Artboard 1.webp",
         description: ""
       },
        {
         title: "Lassen construction",
-        bigImage: "assets/lassenlogo1Artboard 1.png",
-        mockup1: "assets/las3Artboard 1.png",
-        mockup2: "assets/LCTSArtboard 1.png",
+        bigImage: "assets/lassenlogo1Artboard 1.webp",
+        mockup1: "assets/las3Artboard 1.webp",
+        mockup2: "assets/LCTSArtboard 1.webp",
         description: ""
       }, 
       {
         title: "JM Equipment repair",
-        bigImage: "assets/JM Equipment repairlogArtboard 1.png",
-        mockup1: "assets/JMArtboard 1.png",
-        mockup2: "assets/jmtsArtboard 1.png",
+        bigImage: "assets/JM Equipment repairlogArtboard 1.webp",
+        mockup1: "assets/JMArtboard 1.webp",
+        mockup2: "assets/jmtsArtboard 1.webp",
         description: ""
       }, 
       {
         title: "CAR-Thena",
         bigImage: "assets/CAR-TArtboard 1.svg",
-        mockup1: "assets/Cartdoc2Artboard 1.png",
-        mockup2: "assets/CartdocArtboard 1.png",
+        mockup1: "assets/Cartdoc2Artboard 1.webp",
+        mockup2: "assets/CartdocArtboard 1.webp",
         description: ""
       },
       {
         title: "Walsh Capital",
-        bigImage: "assets/Walsh2Artboard 1@3x.png",
-        mockup1: "assets/WAArtboard 1.png",
-        mockup2: "assets/WCTSArtboard 1.png",
+        bigImage: "assets/Walsh2Artboard 1@3x.webp",
+        mockup1: "assets/WAArtboard 1.webp",
+        mockup2: "assets/WCTSArtboard 1.webp",
         description: ""
       },
       {
         title: "Parramatta Consultancy",
-        bigImage: "assets/PARRAMATTA2Artboard 1@2x.png",
-        mockup1: "assets/pcArtboard 1.png",
-        mockup2: "assets/pctsArtboard 1.png",
+        bigImage: "assets/PARRAMATTA2Artboard 1@2x.webp",
+        mockup1: "assets/pcArtboard 1.webp",
+        mockup2: "assets/pctsArtboard 1.webp",
         description: ""
       },
       {
         title: "City Grill",
         bigImage: "assets/CITYGRILLArtboard 1.svg",
-        mockup1: "assets/cg1Artboard 1.png",
-        mockup2: "assets/cgtsArtboard 1.png",
+        mockup1: "assets/cg1Artboard 1.webp",
+        mockup2: "assets/cgtsArtboard 1.webp",
         description: ""
       },
       {
         title: "Capstan Software solutions",
-        bigImage: "assets/CAPSTANArtboard 1.png",
-        mockup1: "assets/CBArtboard 1.png",
-        mockup2: "assets/CBTSArtboard 1.png",
+        bigImage: "assets/CAPSTANArtboard 1.webp",
+        mockup1: "assets/CBArtboard 1.webp",
+        mockup2: "assets/CBTSArtboard 1.webp",
         description: ""
       },
       {
         title: "The Boardroom Africa",
-        bigImage: "assets/boardArtboard 1board2.png",
-        mockup1: "assets/TBAArtboard 1.png",
-        mockup2: "assets/TBATSArtboard 1.png",
+        bigImage: "assets/boardArtboard 1board2.webp",
+        mockup1: "assets/TBAArtboard 1.webp",
+        mockup2: "assets/TBATSArtboard 1.webp",
         description: ""
       }
     ];
