fixing video size

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       </ul>
     </nav>
   </header>
-  <button id="theme-toggle" class="btn">Dark Mode</button>
   <section class="hero">
   <div class="hero-content">
     <div class="hero-text">
@@ -38,10 +37,12 @@
       <a href="#projects" class="btn">Explore Services</a>
     </div>
     <div class="hero-video">
-      <video autoplay muted loop>
-        <source src="assets/animation.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
+      <div class="video-container">
+        <video autoplay muted loop playsinline>
+          <source src="assets/animation.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+      </div>
     </div>
   </div>
 </section>
@@ -110,9 +111,7 @@
       </p>
     </div>
   </section>
-  
-  
-
+ <button id="theme-toggle" class="btn">Dark Mode</button>
   <section id="contact" class="section contact">
     <h2>Get in Touch</h2>
     <p>Email us at: <a href="mailto:archersterling753@gmail.com">archersterling753@gmail.com</a></p>
