--- a/Projects.html
+++ b/Projects.html
@@ -140,7 +140,7 @@
 </head>
 <body>
    <header class="navbar">
-    <div class="logo"><img src="assets/ShoniconArtboard 1.svg" alt="Shön Logo" width="180px" />
+    <div class="logo"><img src="assets/goldlogg2Artboard 1.png" alt="Shön Logo" width="100px" />
 </div>
     <nav>
       <ul>
